--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,22 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        compose_version = '1.5.0-beta02'
+    }
+    repositories {
+        maven { url "https://jitpack.io" }
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.46.1'
+    }
+}
 plugins {
-id 'com.android.application' version '8.2.0' apply false
+    id 'com.android.application' version '8.2.0' apply false
+    id 'com.android.library' version '8.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.46.1' apply false
+}
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
