--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,8 +88,8 @@ dependencies {
     // Dagger - Hilt
     implementation 'com.google.dagger:hilt-android:2.46.1'
     kapt 'com.google.dagger:hilt-compiler:2.46.1'
-    implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
 
     // Room
 //    implementation "androidx.room:room-runtime:2.5.0"
