--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     implementation "androidx.glance:glance-appwidget:1.1.0"
     implementation "androidx.glance:glance-material3:1.1.0"
 
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
+
     // Room
     //    implementation "androidx.room:room-runtime:2.5.0"
     //    kapt "androidx.room:room-compiler:2.5.0"
